--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.2.3
   telegram_web_app: ^0.1.5
   provider: ^6.1.2
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
